src/components/ui/ui.module.scss
.ap_button {
  display: inline-flex;
  cursor: pointer;
  align-items: center;
  background-color: var(--off-white);
  color: var(--body-bg);
  transition: all 0.2s ease-in-out;
  font-weight: 600;
  border: 2px solid transparent;
  justify-content: center;
  border-radius: 2px;
  white-space: nowrap;

  svg {
    width: 15px;
    height: 15px;
    transition: all 0.2s ease;
    margin-top: 1px;
    path {
      fill: var(--black);
    }
  }

  //varient
  &.primary {
    background-color: var(--primary-color);
    color: var(--white);
    svg {
      path {
        fill: var(--white);
      }
    }
    &:hover {
      background-color: var(--white);
      color: var(--black);
      svg {
        path {
          fill: var(--black);
        }
      }
    }
  }
  &.secondary {
    background-color: var(--secondary-color);
    color: var(--white);
    svg {
      path {
        fill: var(--white);
      }
    }
    &:hover {
      background-color: var(--white);
      color: var(--black);
      svg {
        path {
          fill: var(--black);
        }
      }
    }
  }
  &.washed {
    background-color: rgba(var(--alphaWhite), 0.08);
    color: var(--white);
    svg {
      path {
        fill: var(--white);
      }
    }
    &:hover {
      background-color: var(--white);
      color: var(--black);
      svg {
        path {
          fill: var(--black);
        }
      }
    }
  }
  &.ghost {
    background-color: transparent;
    border-color: var(--white);
    color: var(--white);
    svg {
      path {
        fill: var(--white);
      }
    }
    &:hover {
      background-color: var(--white);
      color: var(--black);
    }
  }
  &.primaryGhost {
    background-color: transparent;
    border-color: var(--primary-color);
    color: var(--primary-color);
    svg {
      path {
        fill: var(--primary-color);
      }
    }
    &:hover {
      background-color: var(--primary-color);
      color: var(--white);
      svg {
        path {
          fill: var(--white);
        }
      }
    }
  }
  &.secondaryGhost {
    background-color: transparent;
    border-color: var(--secondary-color);
    color: var(--secondary-color);
    svg {
      path {
        fill: var(--secondary-color);
      }
    }
    &:hover {
      background-color: var(--secondary-color);
      color: var(--white);
      svg {
        path {
          fill: var(--white);
        }
      }
    }
  }

  //Sizes
  &.large {
    padding-inline: clamp(40px, 4vw, 60px);
    line-height: 54px;
    font-size: 20px;
    gap: 20px;
    font-weight: 700;
    @media all and (max-width: 767px) {
      width: 100%;
    }
  }
  &.regular {
    padding-inline: 40px;
    line-height: 48px;
    font-size: 18px;
    gap: 15px;
    font-weight: 700;
    svg {
      width: 12px;
      height: 12px;
    }
    @media all and (max-width: 767px) {
      width: 100%;
    }
  }
  &.small {
    padding-inline: 20px;
    line-height: 35px;
    font-weight: 700;
    font-size: 16px;
    gap: 10px;
    svg {
      width: 10px;
      height: 10px;
    }
  }
  &.xSmall {
    padding-inline: 12px;
    line-height: 28px;
    font-weight: 600;
    font-size: 14px;
    gap: 10px;
    svg {
      width: 8px;
      height: 8px;
    }
  }
  &:hover {
    background-color: rgba(var(--alphaWhite), 0.08);
    color: var(--white);
    svg {
      transform: translateX(6px);
      path {
        fill: var(--white);
      }
    }
  }

  @media all and (max-width: 540px) {
    white-space: nowrap;
    > svg {
      display: none;
    }
  }
}

//#########

.photoCaption {
  font-size: clamp(14px, 5vw, 18px);
  font-weight: 300;
  opacity: 0.68;
}

.responsiveImg {
  height: 625px;
  width: 625px;
  object-fit: cover;
  @media all and (max-width: 767px) {
    height: 425px;
  }
}

.contetPart {
  h2 {
    font-size: clamp(38px, 5vw, 50px);
    font-weight: 300;
    line-height: 1.2;
    margin-bottom: clamp(25px, 5vw, 50px);
  }
  p {
    font-size: clamp(20px, 5vw, 26px);
    font-weight: 300;
    line-height: 1.5;
    opacity: 0.8;
    margin-bottom: clamp(20px, 5vw, 40px);
    &:last-child {
      margin-bottom: clamp(5px, 5vw, 28px);
    }
  }
}

@media all and (max-width: 767px) {
  .photoCaption {
    text-align: center;
  }
}

//
.innerPageUsp {
  .uspWrapper {
    border-top: solid 4px var(--secondary-color);
    padding-top: clamp(25px, 5vw, 40px);
    gap: 12rem;
    display: flex;
    justify-content: center;
    > div {
      max-width: 250px;
    }
    @media all and (max-width: 767px) {
      flex-direction: column;
      gap: 40px;
    }
  }
}

//.uspcard {
.uspcard {
  h2 {
    font-weight: 600;
  }
  p {
    opacity: 1;
  }
}

//Highlight text
.hightLightText {
  border-top: solid 4px var(--secondary-color);
  padding-top: clamp(25px, 5vw, 40px);
  h2 {
    font-size: clamp(42px, 5vw, 50px);
    font-weight: 400;
    line-height: 1.3;
    color: var(--white);
    @media all and (max-width: 767px) {
      text-align: center;
    }
  }
}

//Tab Styles
//Tab Styles
.apTabNavWrapper {
  display: flex;
  gap: 5px;
  margin-bottom: 40px;
  justify-content: center;

  @media all and (max-width: 767px) {
    justify-content: flex-start;
    overflow-x: auto;
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
    margin-left: -20px;
    margin-right: -20px;
    width: auto;
    padding: 0 20px;
    margin-bottom: 20px;
    &::-webkit-scrollbar {
      display: none;
    }
  }

  button {
    display: inline-block;
    font-weight: 600;
    background-color: rgba(var(--alphaWhite), 0.08);
    color: rgba(var(--alphaWhite), 0.48);
    font-size: 18px;
    padding: 10px 25px;
    transition: all 0.3s ease-in-out;
    cursor: pointer;
    &.active,
    &:hover {
      background-color: rgba(var(--alphaWhite), 0.14);
      backdrop-filter: blur(10px);
      color: white;
    }
  }
}

//Card Item
.cardItem {
  padding: 45px 32px;
  backdrop-filter: blur(19.1619px);
  background: rgba(255, 255, 255, 0.04);
  height: 100%;
  display: flex;
  flex-direction: column;

  h3 {
    margin-bottom: 20px;
    font-size: max(30px, min(5vw, 34px));
    font-weight: 600;
    line-height: 1.2;
    max-width: 90%;
    margin-inline: auto;
  }
  p {
    margin-bottom: 0;
    font-size: max(18px, min(5vw, 20px));
    font-weight: 400;
    line-height: 1.4;
    color: #e1e1e1;
    max-width: 90%;
    margin-inline: auto;
  }
  .cardCta {
    margin-top: clamp(20px, 5vw, 30px);
    max-width: 90%;
    margin-inline: auto;
    a {
      font-size: inherit;
      justify-content: center;
      align-items: center;
      gap: 15px;
      font-weight: 700;
      display: flex;
    }
    svg {
      display: inline-block;
      circle {
        fill: var(--secondary-color);
      }
      mask {
        fill: var(--secondary-color);
      }
      path {
        fill: var(--white);
      }
    }
  }

  &.cardCompact {
    padding: clamp(25px, 5vw, 38px) clamp(20px, 5vw, 30px);
    h3 {
      margin-bottom: 18px;
    }
    p {
      margin-bottom: 0;
    }
    .cardCta {
      margin-top: clamp(15px, 5vw, 20px);
    }
  }
  &.cardLarge {
    padding: clamp(30px, 5vw, 60px) clamp(25px, 5vw, 50px);
    h3 {
      margin-bottom: 30px;
      max-width: 100%;
    }
    p {
      margin-bottom: 0;
      max-width: 100%;
    }
    .cardCta {
      max-width: 100%;
      margin-top: clamp(25px, 5vw, 40px);
    }
  }
  &.cardSmall {
    padding: clamp(30px, 5vw, 40px) clamp(25px, 5vw, 40px);
    h3 {
      font-size: max(25px, min(5vw, 30px));
      line-height: 1.1;
      margin-bottom: 30px;
      max-width: 100%;
    }
    p {
      margin-bottom: 0;
      max-width: 100%;
    }
    .cardCta {
      max-width: 100%;
      margin-top: clamp(25px, 5vw, 40px);
    }
  }
  &.cardBold {
    h3 {
      font-weight: 700;
    }
  }
  &.activeCard {
    background-color: var(--secondary-color);
    color: white;
    .cardCta {
      a {
        svg circle {
          fill: var(--white);
        }
        svg mask {
          fill: var(--white);
        }
        svg path {
          fill: var(--secondary-color);
        }
      }
    }
  }
  &.itemsCenter {
    text-align: center;
    p {
      text-align: center !important;
    }
  }
  &.itemsleft {
    text-align: left;
    p {
      text-align: left;
      margin-left: 0;
    }
    h3,
    .cardCta {
      margin-left: 0 !important;
    }
  }
}

//####

.boxed {
  padding: 80px;
  background-color: rgba(255, 255, 255, 0.04);
  @media all and (max-width: 767px) {
    padding: 45px 30px;
  }
}

//List UI
.uiLists {
  margin: 20px 0 0;
  padding: 0;
  li {
    font-size: clamp(18px, 5vw, 20px);
    font-weight: 400;
    line-height: 1.4;
    margin-bottom: 35px;
    color: rgba(var(--alphaWhite), 0.8);
    &:last-child {
      margin-bottom: 0;
    }
    h2 {
      font-size: clamp(20px, 5vw, 20px);
      margin-bottom: 5px;
    }
  }
  &.default {
    li {
      position: relative;
      padding-left: clamp(40px, 5vw, 50px);
      &:before {
        content: "";
        background-image: url("/img/arrow-right.svg");
        background-repeat: no-repeat;
        background-size: 10px;
        height: 25px;
        width: 25px;
        border-radius: 50%;
        background-position: 6px center;
        background-color: rgba(255, 255, 255, 0.14);
        position: absolute;
        left: 0;
        top: 3px;
      }
    }
  }
  &.arrowBlue {
    li {
      position: relative;
      padding-left: clamp(40px, 5vw, 50px);
      &:before {
        content: "";
        background-image: url("/img/arrow-right.svg");
        background-repeat: no-repeat;
        background-size: 10px;
        height: 25px;
        width: 25px;
        border-radius: 50%;
        background-position: 6px center;
        background-color: var(--secondary-color);
        position: absolute;
        left: 0;
        top: 3px;
      }
    }
  }
  &.arrowRed {
    li {
      position: relative;
      padding-left: clamp(40px, 5vw, 50px);
      &:before {
        content: "";
        background-image: url("/img/arrow-right.svg");
        background-repeat: no-repeat;
        background-size: 10px;
        height: 25px;
        width: 25px;
        border-radius: 50%;
        background-position: 6px center;
        background-color: var(--primary-color);
        position: absolute;
        left: 0;
        top: 3px;
      }
    }
  }
  &.sizeSmall {
    li {
      padding-left: clamp(25px, 5vw, 35px);
      font-size: clamp(16px, 5vw, 18px);
      margin-bottom: 20px;
      &:last-child {
        margin-bottom: 0;
      }
      &:before {
        height: 20px;
        width: 20px;
        background-position: 4px center;
        background-size: 9px;
      }
    }
  }
  &.sizeLarge {
    li {
      padding-left: clamp(40px, 5vw, 50px);
      font-size: clamp(20px, 5vw, 22px);
      &:before {
        height: 30px;
        width: 30px;
        background-position: 8.5px center;
        background-size: 11px;
        top: 0;
      }
    }
  }
  &.disc {
    margin-left: 20px;
    li {
      list-style: disc;
      padding-left: 5px;
    }
  }
  &.number {
    margin-left: 20px;
    li {
      list-style: decimal;
      padding-left: 10px;
      &::marker {
        font-weight: 600;
      }
    }
  }
}

